--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "lint": "ng lint"
+    "lint": "ng lint",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "private": true,
   "dependencies": {
@@ -34,8 +36,11 @@
     "@angular/cli": "^19.1.8",
     "@angular/compiler-cli": "^19.1.0",
     "@ngrx/schematics": "^19.0.1",
+    "@types/jest": "^29.5.14",
     "angular-eslint": "19.1.0",
     "eslint": "^9.20.0",
+    "jest": "^29.7.0",
+    "jest-preset-angular": "^14.5.3",
     "prettier": "3.5.2",
     "typescript": "~5.7.2",
     "typescript-eslint": "8.23.0"
