--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "bootstrap": "^5.3.3",
     "ngrx-forms": "^8.0.0",
     "rxjs": "~7.8.0",
+    "ts-node": "^10.9.2",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
