--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "@angular/platform-browser": "^19.2.2",
     "@angular/platform-browser-dynamic": "^19.2.2",
     "@angular/router": "^19.2.2",
+    "@ng-bootstrap/ng-bootstrap": "^18.0.0",
     "@ngrx/component": "^19.0.1",
     "@ngrx/effects": "^19.0.1",
     "@ngrx/entity": "^19.0.1",
     "@ngrx/store": "^19.0.1",
     "@ngrx/store-devtools": "^19.0.1",
+    "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.3",
     "ngrx-forms": "^8.0.0",
     "rxjs": "~7.8.0",
@@ -36,6 +38,7 @@
     "@angular-devkit/build-angular": "^19.2.3",
     "@angular/cli": "^19.2.3",
     "@angular/compiler-cli": "^19.2.2",
+    "@angular/localize": "^19.2.2",
     "@ngrx/schematics": "^19.0.1",
     "@types/jest": "^29.5.14",
     "angular-eslint": "19.2.1",
