Add @types/jest to tsconfig types

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,8 @@
       ]
     },
     "types": [
-      "@angular/localize"
+      "@angular/localize",
+      "@types/jest"
     ]
   },
   "angularCompilerOptions": {
