--- a/package.json
+++ b/package.json
@@ -27,8 +27,12 @@
     "@ngrx/entity": "^19.0.1",
     "@ngrx/store": "^19.0.1",
     "@ngrx/store-devtools": "^19.0.1",
+    "@tailwindcss/postcss": "^4.0.16",
+    "flowbite": "^3.1.2",
     "ngrx-forms": "^8.0.0",
+    "postcss": "^8.5.3",
     "rxjs": "~7.8.0",
+    "tailwindcss": "^4.0.16",
     "ts-node": "^10.9.2",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
@@ -44,7 +48,8 @@
     "eslint": "^9.20.0",
     "jest": "^29.7.0",
     "jest-preset-angular": "^14.5.3",
-    "prettier": "3.5.2",
+    "prettier": "^3.5.2",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "typescript": "~5.7.2",
     "typescript-eslint": "8.23.0"
   }
