--- a/package.json
+++ b/package.json
@@ -17,17 +17,17 @@
     "@angular/common": "^19.2.2",
     "@angular/compiler": "^19.2.2",
     "@angular/core": "^19.2.2",
-    "@angular/forms": "^19.2.2",
+    "@angular/forms": "^19.2.7",
     "@angular/platform-browser": "^19.2.2",
-    "@angular/platform-browser-dynamic": "^19.2.2",
-    "@angular/router": "^19.2.2",
+    "@angular/platform-browser-dynamic": "^19.2.7",
+    "@angular/router": "^19.2.7",
     "@ng-bootstrap/ng-bootstrap": "^18.0.0",
-    "@ngrx/component": "^19.0.1",
-    "@ngrx/effects": "^19.0.1",
-    "@ngrx/entity": "^19.0.1",
+    "@ngrx/component": "^19.1.0",
+    "@ngrx/effects": "^19.1.0",
+    "@ngrx/entity": "^19.1.0",
     "@ngrx/store": "^19.0.1",
-    "@ngrx/store-devtools": "^19.0.1",
-    "@tailwindcss/postcss": "^4.0.16",
+    "@ngrx/store-devtools": "^19.1.0",
+    "@tailwindcss/postcss": "^4.1.4",
     "flowbite": "^3.1.2",
     "ngrx-forms": "^8.0.0",
     "postcss": "^8.5.3",
@@ -35,20 +35,20 @@
     "tailwindcss": "^4.0.16",
     "ts-node": "^10.9.2",
     "tslib": "^2.3.0",
-    "zone.js": "~0.15.0"
+    "zone.js": "^0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^19.2.3",
-    "@angular/cli": "^19.2.3",
+    "@angular-devkit/build-angular": "^19.2.8",
+    "@angular/cli": "^19.2.8",
     "@angular/compiler-cli": "^19.2.2",
-    "@angular/localize": "^19.2.2",
-    "@ngrx/schematics": "^19.0.1",
+    "@angular/localize": "^19.2.7",
+    "@ngrx/schematics": "^19.1.0",
     "@types/jest": "^29.5.14",
     "angular-eslint": "19.2.1",
-    "eslint": "^9.20.0",
+    "eslint": "^9.25.0",
     "jest": "^29.7.0",
-    "jest-preset-angular": "^14.5.3",
-    "prettier": "^3.5.2",
+    "jest-preset-angular": "^14.5.5",
+    "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "typescript": "~5.7.2",
     "typescript-eslint": "8.23.0"
